unpackaged/main/default/objects/Survey__c/fields/NPS_Exclusion_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>NPS_Exclusion_Submitter_Email__c</fullName>
    <description>Records the email address of the initial submitter for the NPS Insurance Survey exclusion approval process.</description>
    <label>NPS Exclusion Submitter Email</label>
    <type>Email</type>
</CustomField>