unpackaged/main/default/objects/Survey__c/fields/NPS_Grouping__c.field-meta.xml
<CustomField>
    <fullName>NPS_Grouping__c</fullName>
    <formula>CASE(How_Likely_to_Recommend__c,
10, &quot;Promoter&quot;,
9, &quot;Promoter&quot;,
8,&quot;Passive&quot;,
7,&quot;Passive&quot;,
6,&quot;Detractor&quot;,
5,&quot;Detractor&quot;,
4,&quot;Detractor&quot;,
3,&quot;Detractor&quot;,
2,&quot;Detractor&quot;,
1,&quot;Detractor&quot;,
0,&quot;Detractor&quot;,
&quot;n/a&quot;)</formula>
    <label>NPS Grouping</label>
    <type>Text</type>
</CustomField>