unpackaged/main/default/objects/Survey__c/fields/Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Source__c</fullName>
    <formula>TEXT(Opportunity__r.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Lead Source</label>
    <type>Text</type>
</CustomField>