unpackaged/main/default/objects/Survey__c/fields/Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you like us to contact you in the future as special travel offers become available that you might be interested in?</description>
    <label>Opt-In For Specials</label>
    <type>Checkbox</type>
</CustomField>