unpackaged/main/default/objects/Survey__c/fields/Other_Loans_Applied_Desc__c.field-meta.xml
<CustomField>
    <fullName>Other_Loans_Applied_Desc__c</fullName>
    <description>If other loans have been applied for, please describe here (max 250 char)</description>
    <inlineHelpText>If other loans have been applied for, please describe here (max 250 char)</inlineHelpText>
    <label>Other Loans Applied Description</label>
    <type>TextArea</type>
</CustomField>