unpackaged/main/default/objects/Survey__c/fields/Overall_Morale__c.field-meta.xml
<CustomField>
    <fullName>Overall_Morale__c</fullName>
    <description>Overall morale of the organization (10 Highest, 0 Lowest)</description>
    <inlineHelpText>Overall morale of the organization (10 Highest, 0 Lowest)</inlineHelpText>
    <label>Overall Morale</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>