unpackaged/main/default/objects/Survey__c/fields/Previous_Dispatcher_Count__c.field-meta.xml
<CustomField>
    <fullName>Previous_Dispatcher_Count__c</fullName>
    <description>How many dispatchers previously?</description>
    <inlineHelpText>How many dispatchers previously?</inlineHelpText>
    <label>Previous Dispatcher Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>