unpackaged/main/default/objects/Survey__c/fields/Previous_Technician_Count__c.field-meta.xml
<CustomField>
    <fullName>Previous_Technician_Count__c</fullName>
    <description>How many Technicians previously?</description>
    <inlineHelpText>How many Technicians previously?</inlineHelpText>
    <label>Previous Technician Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>