unpackaged/main/default/objects/Survey__c/fields/Previous_Vehicle_Count__c.field-meta.xml
<CustomField>
    <fullName>Previous_Vehicle_Count__c</fullName>
    <label>Previous Vehicle Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>