unpackaged/main/default/objects/Survey__c/fields/Primary_Reason_For_Recommend_Rating__c.field-meta.xml
<CustomField>
    <fullName>Primary_Reason_For_Recommend_Rating__c</fullName>
    <description>What is the primary reason for the recommendation rating?</description>
    <label>Primary Reason For Recommend Rating?</label>
    <type>TextArea</type>
</CustomField>