unpackaged/main/default/objects/Survey__c/fields/Reasons_for_Not_Booking__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Not_Booking__c</fullName>
    <description>Reasons the customer provided for not booking the trip</description>
    <inlineHelpText>Reasons the customer provided for not booking the trip</inlineHelpText>
    <label>Reasons for Not Booking?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of Plans</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>No Trip or Different Trip</fullName>
            </value>
            <value>
                <fullName>Booked Elsewhere</fullName>
            </value>
            <value>
                <fullName>Agent Response</fullName>
            </value>
            <value>
                <fullName>Agent Knowledge/Expertise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>