unpackaged/main/default/objects/Survey__c/fields/Reasons_for_Not_Booking_Other__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Not_Booking_Other__c</fullName>
    <label>Reasons for Not Booking Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>