unpackaged/main/default/objects/Survey__c/fields/Santander_Deferral_Started__c.field-meta.xml
<CustomField>
    <fullName>Santander_Deferral_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Santander has started my loan deferral (Check = True)</description>
    <inlineHelpText>Santander has started my loan deferral (Check = True)</inlineHelpText>
    <label>Santander Deferral Started</label>
    <type>Checkbox</type>
</CustomField>