unpackaged/main/default/objects/Survey__c/fields/Santander_Loan__c.field-meta.xml
<CustomField>
    <fullName>Santander_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have vehicle loans with Santander (Check = True)</description>
    <inlineHelpText>I have vehicle loans with Santander (Check = True)</inlineHelpText>
    <label>Santander Loan</label>
    <type>Checkbox</type>
</CustomField>