unpackaged/main/default/objects/Survey__c/fields/Santander_Request_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Santander_Request_Deferral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I have requested Santander to defer vehicle loan(s)  (Check =True)</description>
    <inlineHelpText>I have requested Santander to defer vehicle loan(s)  (Check =True)</inlineHelpText>
    <label>Santander Request Deferral</label>
    <type>Checkbox</type>
</CustomField>