unpackaged/main/default/objects/Survey__c/fields/Survey_Channel__c.field-meta.xml
<CustomField>
    <fullName>Survey_Channel__c</fullName>
    <defaultValue>&quot;Email&quot;</defaultValue>
    <description>Channel through which Survey was sent.</description>
    <label>Survey Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel</valueSetName>
    </valueSet>
</CustomField>