unpackaged/main/default/objects/Survey__c/fields/Survey_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed_Date__c</fullName>
    <description>Date/Time that the survey response was submitted</description>
    <inlineHelpText>Date/Time that the survey response was submitted</inlineHelpText>
    <label>Survey Completed Date</label>
    <type>DateTime</type>
</CustomField>