unpackaged/main/default/objects/Survey__c/fields/Survey_Process_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Survey_Process_Criteria__c</fullName>
    <description>Indicates which insurance process or change created the survey. This is determined in the Survey - Insurance NPS process builder.</description>
    <label>Survey Process Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Policy Renewal</fullName>
            </value>
            <value>
                <fullName>Service Policy Change</fullName>
            </value>
            <value>
                <fullName>Policy Cancellation</fullName>
            </value>
            <value>
                <fullName>Claim FNOL</fullName>
            </value>
            <value>
                <fullName>Claim Final Payment</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>