unpackaged/main/default/objects/Survey__c/fields/Testing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Testing_Notes__c</fullName>
    <label>Testing Notes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>