unpackaged/main/default/objects/Survey__c/fields/Top_Box__c.field-meta.xml
<CustomField>
    <fullName>Top_Box__c</fullName>
    <formula>IF( How_Likely_to_Recommend__c &gt; 8, 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Box</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>