unpackaged/main/default/objects/Survey__c/fields/Travel_NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_NPS_Type__c</fullName>
    <label>Travel NPS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>TOOT</fullName>
            </value>
            <value>
                <fullName>Welcome Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>