unpackaged/main/default/objects/Survey__c/fields/Travel_Region__c.field-meta.xml
<CustomField>
    <fullName>Travel_Region__c</fullName>
    <formula>Car_Care_Location__r.Travel_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Region</label>
    <type>Text</type>
</CustomField>