unpackaged/main/default/objects/Survey__c/fields/Vehicle_Loans_Other_Banks__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Loans_Other_Banks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applied for vehicle loans with other banks (Check =True)</description>
    <inlineHelpText>Applied for vehicle loans with other banks (Check =True)</inlineHelpText>
    <label>Vehicle Loans Other Banks</label>
    <type>Checkbox</type>
</CustomField>