unpackaged/main/default/objects/Survey__c/fields/VehicleLoansOtherBanksDeferStarted__c.field-meta.xml
<CustomField>
    <fullName>VehicleLoansOtherBanksDeferStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The loans for other banks have been deferred (Check = True)</description>
    <inlineHelpText>The loans for other banks have been deferred (Check = True)</inlineHelpText>
    <label>Vehicle Loans Other Banks Defer Started</label>
    <type>Checkbox</type>
</CustomField>