unpackaged/main/default/objects/Survey__c/fields/What_Would_It_Take__c.field-meta.xml
<CustomField>
    <fullName>What_Would_It_Take__c</fullName>
    <description>Question presented if the Member/Customer chooses 7 or 8 for their likelihood to recommend.</description>
    <label>What Would It Take?</label>
    <type>TextArea</type>
</CustomField>