unpackaged/main/default/objects/Survey__c/fields/Willing_to_Share_Info__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_Share_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I am willing to share info to help</description>
    <inlineHelpText>I am willing to share info to help</inlineHelpText>
    <label>Willing to Share Info</label>
    <type>Checkbox</type>
</CustomField>