unpackaged/main/default/objects/Survey__c/recordTypes/ACG_CCC_CSat.recordType-meta.xml
<RecordType>
    <fullName>ACG_CCC_CSat</fullName>
    <active>true</active>
    <description>CCC Customer Satisfaction Survey</description>
    <label>CCC CSat</label>
</RecordType>