unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Fins_NPS_Survey.recordType-meta.xml
<RecordType>
    <fullName>ACG_Fins_NPS_Survey</fullName>
    <active>true</active>
    <description>Fins customer NPS survey</description>
    <label>Fins NPS Survey</label>
</RecordType>