unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Go_Magazine_Readership_Survey.recordType-meta.xml
<RecordType>
    <fullName>ACG_Go_Magazine_Readership_Survey</fullName>
    <active>true</active>
    <description>Records responses submitted to Go Magazine surveys.</description>
    <label>Go Magazine Readership Survey</label>
</RecordType>