unpackaged/main/default/objects/Survey__c/recordTypes/ACG_In_Store.recordType-meta.xml
<RecordType>
    <fullName>ACG_In_Store</fullName>
    <active>true</active>
    <description>Surveys collected in store</description>
    <label>In Store</label>
</RecordType>