unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Insurance_NPS.recordType-meta.xml
<RecordType>
    <fullName>ACG_Insurance_NPS</fullName>
    <active>true</active>
    <description>Records Insurance NPS Survey responses.</description>
    <label>Insurance NPS</label>
</RecordType>