unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Membership_NPS.recordType-meta.xml
<RecordType>
    <fullName>ACG_Membership_NPS</fullName>
    <active>true</active>
    <description>Records Membership NPS survey responses.</description>
    <label>Membership NPS</label>
</RecordType>