unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Tow_Provider_Survey.recordType-meta.xml
<RecordType>
    <fullName>ACG_Tow_Provider_Survey</fullName>
    <active>true</active>
    <description>Tow provider survey (Initially used during COVID-19)</description>
    <label>Tow Provider Survey</label>
</RecordType>