unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Travel_Closed_Lost.recordType-meta.xml
<RecordType>
    <fullName>ACG_Travel_Closed_Lost</fullName>
    <active>true</active>
    <description>Travel Closed Lost survey</description>
    <label>Travel Closed Lost</label>
</RecordType>