unpackaged/main/default/objects/Survey__c/recordTypes/ACG_Travel_NPS.recordType-meta.xml
<RecordType>
    <fullName>ACG_Travel_NPS</fullName>
    <active>true</active>
    <description>Records Travel NPS Survey responses.</description>
    <label>Travel NPS</label>
</RecordType>