unpackaged/main/default/objects/Survey__c/recordTypes/ERS_Event_Survey.recordType-meta.xml
<RecordType>
    <fullName>ERS_Event_Survey</fullName>
    <active>true</active>
    <description>NPS survey</description>
    <label>ERS Event Survey</label>
</RecordType>